--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>
 
     </title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="header">
@@ -17,7 +18,7 @@
    
 
     <div class = "bodyimg">
-        <img src = "images/cicada.png" height="600px" width = "100%">
+        <img src = "images/main2.jpg" height="600px" width = "100%">
         <p>
             Origami Instructions and Diagrams
         </p>
@@ -27,6 +28,7 @@
             together the largest database of free origami designs anywhere on the internet.
         </h3>
     </div>
+
     <div class = "grid">
         <div class ="origami">
             <center>
@@ -41,20 +43,69 @@
                 </ol>
             </p>
         </div>
-    </div>
-    <div class ="origami">
-        <center>
-            <img src = "images/chameleon.png" width = "200px" height = "200px"
-            <h3> Chameleon </h3>
-        </center>
-        <p>
-            <ol>
-                <li>Chameleons are reptiles that are part of the iguana suborder</li>
-                <li>Changing skin color is an important part of communication among chameleons</li>
-                <li>Most chameleons have a prehensile tail that they use to wrap around tree branches.</li>
-            </ol>
-        </p>
-    </div>
+
+        <div class ="origami">
+            <center>
+                <a href = "http://origami.me/chameleon/"><img src = "images/chameleon.png" width = "200px" height = "200px"></a>
+                <h3> Chameleon </h3>
+            </center>
+            <p>
+                <ol>
+                    <li>Chameleons are reptiles that are part of the iguana suborder.</li>
+                </ol>
+            </p>
+        </div>
+    
+        <div class ="origami">
+            <center>
+                <a href = "http://origami.me/chameleon/"><img src = "images/cicada.png" width = "200px" height = "200px"></a>
+                <h3> Cicada </h3>
+            </center>
+            <p>
+                <ol>
+                    <li>This is a cicada.</li>
+                </ol>
+            </p>
+        </div>
+
+        <div class ="origami">
+            <center>
+                <a href = "http://origami.me/panda/"><img src = "images/panda.png" width = "200px" height = "200px"></a>
+                <h3> Panda </h3>
+            </center>
+            <p>
+                <ol>
+                    <li>Pandas are really endangered species.</li>
+                    <li>One of the rarest species of pandas are the "Red Pandas".</li>
+                </ol>
+            </p>
+        </div>
+
+        <div class ="origami">
+            <center>
+                <a href = "http://origami.me/pigeon/"><img src = "images/pigeon.png" width = "200px" height = "200px"></a>
+                <h3> Pigeon </h3>
+            </center>
+            <p>
+                <ol>
+                    <li>Pigeons are endangered species of birds.</li>
+                    <li>They migrate from place to place in cold.</li>
+                </ol>
+            </p>
+        </div>
+
+        <div class ="origami">
+            <center>
+                <a href = "http://origami.me/teddy/"><img src = "images/teddy.png" width = "200px" height = "200px"></a>
+                <h3> Teddy </h3>
+            </center>
+            <p>
+                <ol>
+                    <li>Teddy is really soft and is stuffed with cotton in it.</li>
+                </ol>
+            </p>
+        </div>
+</div>
 </div>
 </body>
 </html>
